--- a/index.html
+++ b/index.html
@@ -95,108 +95,120 @@
         <section id="hebergements_marseille" class="hebergements">
           <h2>Hébergements à Marseille</h2>
           <div class="conteneur_carte_hebergement_marseille">
-            <div class="carte_hebergement_marseille">
-              <img
-                src="images/hebergements/2_large/auberge_la_canebiere.jpg"
-                alt="auberge_la_canebiere"
-              />
-              <div>
-                <h3>Auberge La Canebière</h3>
-                <p class="tarifs_marseille">Nuit à partir de 25€</p>
-                <div class="conteneur_icones_notations">
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star derniere_etoile"></i>
+            <article class="carte_hebergement_marseille">
+              <a href="#">
+                <img
+                  src="images/hebergements/2_large/auberge_la_canebiere.jpg"
+                  alt="auberge_la_canebiere"
+                />
+                <div>
+                  <h3>Auberge La Canebière</h3>
+                  <p class="tarifs_marseille">Nuit à partir de 25€</p>
+                  <div class="conteneur_icones_notations">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star derniere_etoile"></i>
+                  </div>
                 </div>
-              </div>
-            </div>
-            <div class="carte_hebergement_marseille">
-              <img
-                src="images/hebergements/2_large/hotel_du_port.jpg"
-                alt="hotel_du_port"
-              />
-              <div>
-                <h3>Hôtel du port</h3>
-                <p class="tarifs_marseille">Nuit à partir de 52€</p>
-                <div class="conteneur_icones_notations">
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star derniere_etoile"></i>
+              </a>
+            </article>
+            <article class="carte_hebergement_marseille">
+              <a href="#">
+                <img
+                  src="images/hebergements/2_large/hotel_du_port.jpg"
+                  alt="hotel_du_port"
+                />
+                <div>
+                  <h3>Hôtel du port</h3>
+                  <p class="tarifs_marseille">Nuit à partir de 52€</p>
+                  <div class="conteneur_icones_notations">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star derniere_etoile"></i>
+                  </div>
                 </div>
-              </div>
-            </div>
-            <div class="carte_hebergement_marseille">
-              <img
-                src="images/hebergements/2_large/hotel_les_mouettes.jpg"
-                alt="hotel_les_mouettes"
-              />
-              <div>
-                <h3>Hôtel Les Mouettes</h3>
-                <p class="tarifs_marseille">Nuit à partir de 76€</p>
-                <div class="conteneur_icones_notations">
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star derniere_etoile"></i>
+              </a>
+            </article>
+            <article class="carte_hebergement_marseille">
+              <a href="#">
+                <img
+                  src="images/hebergements/2_large/hotel_les_mouettes.jpg"
+                  alt="hotel_les_mouettes"
+                />
+                <div>
+                  <h3>Hôtel Les Mouettes</h3>
+                  <p class="tarifs_marseille">Nuit à partir de 76€</p>
+                  <div class="conteneur_icones_notations">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star derniere_etoile"></i>
+                  </div>
                 </div>
-              </div>
-            </div>
-            <div class="carte_hebergement_marseille">
-              <img
-                src="images/hebergements/2_large/hotel_de_la_mer.jpg"
-                alt="hotel_de_la_mer"
-              />
-              <div>
-                <h3>Hôtel de la mer</h3>
-                <p class="tarifs_marseille">Nuit à partir de 46€</p>
-                <div class="conteneur_icones_notations">
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star derniere_etoile"></i>
+              </a>
+            </article>
+            <article class="carte_hebergement_marseille">
+              <a href="#">
+                <img
+                  src="images/hebergements/2_large/hotel_de_la_mer.jpg"
+                  alt="hotel_de_la_mer"
+                />
+                <div>
+                  <h3>Hôtel de la mer</h3>
+                  <p class="tarifs_marseille">Nuit à partir de 46€</p>
+                  <div class="conteneur_icones_notations">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star derniere_etoile"></i>
+                  </div>
                 </div>
-              </div>
-            </div>
-            <div class="carte_hebergement_marseille">
-              <img
-                src="images/hebergements/2_large/auberge_le_panier.jpg"
-                alt="auberge_le_panier"
-              />
-              <div>
-                <h3>Auberge Le Panier</h3>
-                <p class="tarifs_marseille">Nuit à partir de 23€</p>
-                <div class="conteneur_icones_notations">
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star derniere_etoile"></i>
+              </a>
+            </article>
+            <article class="carte_hebergement_marseille">
+              <a href="#">
+                <img
+                  src="images/hebergements/2_large/auberge_le_panier.jpg"
+                  alt="auberge_le_panier"
+                />
+                <div>
+                  <h3>Auberge Le Panier</h3>
+                  <p class="tarifs_marseille">Nuit à partir de 23€</p>
+                  <div class="conteneur_icones_notations">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star derniere_etoile"></i>
+                  </div>
                 </div>
-              </div>
-            </div>
-            <div class="carte_hebergement_marseille">
-              <img
-                src="images/hebergements/2_large/hotel_chez_amina.jpg"
-                alt="hotel_chez_amina"
-              />
-              <div>
-                <h3>Hôtel Chez Amina</h3>
-                <p class="tarifs_marseille">Nuit à partir de 96€</p>
-                <div class="conteneur_icones_notations">
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star derniere_etoile"></i>
+              </a>
+            </article>
+            <article class="carte_hebergement_marseille">
+              <a href="#">
+                <img
+                  src="images/hebergements/2_large/hotel_chez_amina.jpg"
+                  alt="hotel_chez_amina"
+                />
+                <div>
+                  <h3>Hôtel Chez Amina</h3>
+                  <p class="tarifs_marseille">Nuit à partir de 96€</p>
+                  <div class="conteneur_icones_notations">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star derniere_etoile"></i>
+                  </div>
                 </div>
-              </div>
-            </div>
+              </a>
+            </article>
           </div>
           <span class="afficher_plus">Afficher plus</span>
         </section>
@@ -206,106 +218,120 @@
             <i class="fa-solid fa-chart-line" id="graphique_tendance"></i>
           </h2>
           <div class="conteneur_carte_populaire_marseille">
-            <div class="carte_populaire_marseille">
-              <img
-                src="images/hebergements/2_large/hotel_le_soleil_du_matin.jpg"
-                alt="hotel_le_soleil_du_matin"
-                class="image_hotel_le_soleil_du_matin"
-              />
-              <div>
-                <h3 class="nom_marseille">Hôtel Le soleil du matin</h3>
-                <p class="tarifs_marseille">Nuit à partir de 128€</p>
-                <div class="conteneur_icones_notations_plus_populaires">
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star derniere_etoile"></i>
+            <article class="carte_populaire_marseille">
+              <a href="#">
+                <img
+                  src="images/hebergements/2_large/hotel_le_soleil_du_matin.jpg"
+                  alt="hotel_le_soleil_du_matin"
+                  class="image_hotel_le_soleil_du_matin"
+                />
+                <div>
+                  <h3 class="nom_marseille">Hôtel Le soleil du matin</h3>
+                  <p class="tarifs_marseille">Nuit à partir de 128€</p>
+                  <div class="conteneur_icones_notations_plus_populaires">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star derniere_etoile"></i>
+                  </div>
                 </div>
-              </div>
-            </div>
-            <div class="carte_populaire_marseille">
-              <img
-                src="images/hebergements/2_large/chambres_dhotes_au_coeur_de_leau.jpg"
-                alt="chambres_dhotes_au_coeur_de_leau"
-                class="image_chambres_dhotes_au_coeur_de_leau"
-              />
-              <div>
-                <h3 class="nom_marseille">
-                  Chambres d'hôtes Au coeur de l'eau
-                </h3>
-                <p class="tarifs_marseille">Nuit à partir de 71€</p>
-                <div class="conteneur_icones_notations_plus_populaires">
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star derniere_etoile"></i>
+              </a>
+            </article>
+            <article class="carte_populaire_marseille">
+              <a href="#">
+                <img
+                  src="images/hebergements/2_large/chambres_dhotes_au_coeur_de_leau.jpg"
+                  alt="chambres_dhotes_au_coeur_de_leau"
+                  class="image_chambres_dhotes_au_coeur_de_leau"
+                />
+                <div>
+                  <h3 class="nom_marseille">
+                    Chambres d'hôtes Au coeur de l'eau
+                  </h3>
+                  <p class="tarifs_marseille">Nuit à partir de 71€</p>
+                  <div class="conteneur_icones_notations_plus_populaires">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star derniere_etoile"></i>
+                  </div>
                 </div>
-              </div>
-            </div>
-            <div class="carte_populaire_marseille">
-              <img
-                src="images/hebergements/2_large/hotel_bleu_et_blanc.jpg"
-                alt="hotel_bleu_et_blanc"
-                class="image_hotel_bleu_et_blanc"
-              />
-              <div>
-                <h3 class="nom_marseille">Hôtel Bleu et Blanc</h3>
-                <p class="tarifs_marseille">Nuit à partir de 68€</p>
-                <div class="conteneur_icones_notations_plus_populaires">
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star"></i>
-                  <i class="fa-solid fa-star derniere_etoile"></i>
+              </a>
+            </article>
+            <article class="carte_populaire_marseille">
+              <a href="#">
+                <img
+                  src="images/hebergements/2_large/hotel_bleu_et_blanc.jpg"
+                  alt="hotel_bleu_et_blanc"
+                  class="image_hotel_bleu_et_blanc"
+                />
+                <div>
+                  <h3 class="nom_marseille">Hôtel Bleu et Blanc</h3>
+                  <p class="tarifs_marseille">Nuit à partir de 68€</p>
+                  <div class="conteneur_icones_notations_plus_populaires">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star derniere_etoile"></i>
+                  </div>
                 </div>
-              </div>
-            </div>
+              </a>
+            </article>
           </div>
         </aside>
       </div>
       <section id="activités_marseille" class="activites">
         <h2>Activités à Marseille</h2>
         <div class="conteneur_carte_activites_marseille">
-          <div class="carte_activites_marseille">
-            <img
-              src="images/activites/2_large/vieux_port.jpg"
-              alt="vieux_port"
-            />
-            <div>
-              <h3 class="h3_activites_marseille">Vieux-Port</h3>
-            </div>
-          </div>
-          <div class="carte_activites_marseille">
-            <img
-              src="images/activites/2_large/fort_de_pomegue.jpg"
-              alt="fort_de_pomegue"
-            />
-            <div>
-              <h3 class="h3_activites_marseille">Fort de Pomègues</h3>
-            </div>
-          </div>
-          <div class="carte_activites_marseille">
-            <img
-              src="images/activites/2_large/parc_national_des_calanques.jpg"
-              alt="parc_national_des_calanques"
-            />
-            <div>
-              <h3 class="h3_activites_marseille">
-                Parc national des Calanques
-              </h3>
-            </div>
-          </div>
-          <div class="carte_activites_marseille">
-            <img
-              src="images/activites/2_large/notre_dame_de_la_garde.jpg"
-              alt="notre_dame_de_la_garde"
-            />
-            <div>
-              <h3 class="h3_activites_marseille">Notre-Dame-de-la-Garde</h3>
-            </div>
-          </div>
+          <article class="carte_activites_marseille">
+            <a href="#">
+              <img
+                src="images/activites/2_large/vieux_port.jpg"
+                alt="vieux_port"
+              />
+              <div>
+                <h3 class="h3_activites_marseille">Vieux-Port</h3>
+              </div>
+            </a>
+          </article>
+          <article class="carte_activites_marseille">
+            <a href="#">
+              <img
+                src="images/activites/2_large/fort_de_pomegue.jpg"
+                alt="fort_de_pomegue"
+              />
+              <div>
+                <h3 class="h3_activites_marseille">Fort de Pomègues</h3>
+              </div>
+            </a>
+          </article>
+          <article class="carte_activites_marseille">
+            <a href="#">
+              <img
+                src="images/activites/2_large/parc_national_des_calanques.jpg"
+                alt="parc_national_des_calanques"
+              />
+              <div>
+                <h3 class="h3_activites_marseille">
+                  Parc national des Calanques
+                </h3>
+              </div>
+            </a>
+          </article>
+          <article class="carte_activites_marseille">
+            <a href="#">
+              <img
+                src="images/activites/2_large/notre_dame_de_la_garde.jpg"
+                alt="notre_dame_de_la_garde"
+              />
+              <div>
+                <h3 class="h3_activites_marseille">Notre-Dame-de-la-Garde</h3>
+              </div>
+            </a>
+          </article>
         </div>
       </section>
     </main>
